--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
+
+    <header>
+        <div>
+            <img src="" alt="">
+
+            <ul>
+                <li>
+                    <a href=""></a>
+                </li>
+            </ul>
+        </div>
+    </header>
     
 </body>
 </html>
