--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
+
 <body>
 
     <header>
@@ -19,6 +21,15 @@
             </ul>
         </div>
     </header>
-    
+
+    <section class="hero">
+        <img src="" alt="">
+        <div>
+            <h1>Lorem ipsum dolor sit amet.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, cupiditate.</p>
+        </div>
+    </section>
+
 </body>
+
 </html>
